kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pc-shop
  namespace: fsdm-pc-shop-devops
  labels:
    app: pc-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pc-shop
  template:
    metadata:
      labels:
        app: pc-shop
    spec:
      containers:
        - name: server
          image: georgevmlambton/fsdm-pc-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: db
          image: mongo:7.0
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: pc-shop
  namespace: fsdm-pc-shop-devops
spec:
  selector:
    app: pc-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pc-shop
  namespace: fsdm-pc-shop-devops
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Robots-Tag: noindex, nofollow, nosnippet";
spec:
  tls:
    - hosts:
        - 'pc-shop.georgevm.com'
      secretName: tls-certificate
  rules:
    - host: 'pc-shop.georgevm.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pc-shop
                port:
                  number: 80
  ingressClassName: nginx
